cssed a lot, fixed bugs, but labels not showing post modal close

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -73,12 +73,13 @@ max-height: 800px;
   display: block;
   width: 225px;
   height: 100px;
-  background: #0198E1;
+  background: #DEDEDE;
   padding: 10px;
   text-align: center;
   border-radius: 5px;
-  color: white;
+  color: rgb(35, 113, 159);
   font-weight: bold;
+  margin: 15px;
 }
 
 .list-background {
@@ -101,9 +102,4 @@ max-height: 800px;
 .ui-sortable-helper {
   transform: rotate(5deg);
   -webkit-transform: rotate(5deg);
-}
-
-.nav{
-    max-height: 300px;
-    overflow-y:scroll;
 }
